<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMother">

    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="56dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_margin="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:visibility="gone"
                android:id="@+id/uid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_marginTop="20dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/name"
                android:background="@drawable/edt_corner"
                android:inputType="text"
                android:hint="@string/mothers_name"
                android:textColor="@android:color/black"
                />

            <EditText
                android:layout_marginTop="20dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/age"
                android:background="@drawable/edt_corner"
                android:inputType="number"
                android:hint="@string/mothers_age"
                android:textColor="@android:color/black"
                />

            <EditText
                android:layout_marginTop="20dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/nrc"
                android:background="@drawable/edt_corner"
                android:inputType="text"
                android:hint="@string/nrc_number"
                android:textColor="@android:color/black"
                />

            <EditText
                android:layout_marginTop="20dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/pressure"
                android:background="@drawable/edt_corner"
                android:inputType="number"
                android:hint="@string/blood_pressure"
                android:textColor="@android:color/black"
                />

            <EditText
                android:layout_marginTop="20dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/weight"
                android:background="@drawable/edt_corner"
                android:inputType="number"
                android:hint="@string/current_weight"
                android:textColor="@android:color/black"
                />

            <LinearLayout
                android:id="@+id/mychildren"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



            <EditText
                android:layout_marginTop="20dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/child"
                android:background="@drawable/edt_corner"
                android:inputType="text"
                android:hint="Child Name"
                android:textColor="@android:color/black"
                />

            </LinearLayout>


            <Button
                android:textSize="20dp"
                android:layout_gravity="right"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button.Small"
                android:textColor="#FFFFFF"
                android:text="@string/plus"
                android:layout_marginTop="8dp"
                android:id="@+id/addchildview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="onClick"
                android:textSize="16dp"
                android:layout_gravity="center_horizontal"
                android:textAllCaps="false"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="#FFFFFF"
                android:text="SAVE"
                android:layout_margin="8dp"
                android:id="@+id/letsadd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>